[gd_scene load_steps=5 format=3 uid="uid://cb8douuben3ta"]

[ext_resource type="StyleBox" uid="uid://d3t7cf67yjfb5" path="res://themes/main_theme/main_theme_style_box.tres" id="1_84p6h"]
[ext_resource type="Script" path="res://components/statNumberChanger/script_statNumberChanger.gd" id="2_ao5vi"]
[ext_resource type="Texture2D" uid="uid://bur7vowo002by" path="res://assets/up_chevron.svg" id="3_1gw27"]
[ext_resource type="Texture2D" uid="uid://cxonrb1l8ugmo" path="res://assets/down_chevron.svg" id="4_6qxtu"]

[node name="StatNumberChanger" type="PanelContainer"]
custom_minimum_size = Vector2(75, 75)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1077.0
offset_bottom = -573.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("1_84p6h")
script = ExtResource("2_ao5vi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="titleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="IncrementButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 16
icon = ExtResource("3_1gw27")
flat = true
icon_alignment = 1
expand_icon = true

[node name="DecrementButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 16
icon = ExtResource("4_6qxtu")
flat = true
icon_alignment = 1
expand_icon = true

[node name="StatValueLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "10"
horizontal_alignment = 1
vertical_alignment = 1
